# construct

./: AGENTS.md  Cargo.toml  README.md  build.err  install.sh
.github/workflows/: ci.yml  release.yml
crates/adapter-antigravity/: Cargo.toml
crates/adapter-antigravity/src/: lib.rs  main.rs
crates/adapter-claude/: Cargo.toml
crates/adapter-claude/src/: lib.rs  main.rs
crates/adapter-codex/: Cargo.toml
crates/adapter-codex/src/: lib.rs  main.rs
crates/adapter-common/: Cargo.toml
crates/adapter-common/src/: lib.rs  transcript_paths.rs
crates/adapter-grok/: Cargo.toml
crates/adapter-grok/src/: lib.rs
crates/adapter-hermes/: Cargo.toml
crates/adapter-hermes/src/: lib.rs
crates/adapter-kimi/: Cargo.toml
crates/adapter-kimi/src/: lib.rs
crates/adapter-opencode/: Cargo.toml
crates/adapter-opencode/src/: lib.rs
crates/adapter-shell/: Cargo.toml
crates/adapter-shell/src/: lib.rs  main.rs
crates/adapter-smith/: Cargo.toml
crates/adapter-smith/src/: agent.rs  context.rs  hooks.rs  interactive.rs  lib.rs  main.rs  model_limits.rs  observe.rs  title_mode.rs
crates/adapter-smith/src/provider/: anthropic.rs  antigravity_oauth.rs  claude_oauth.rs  codex_oauth.rs  config.rs  gemini.rs  meta.rs  mod.rs  ollama.rs  openai.rs  routing.rs
crates/adapter-smith/src/sandbox/: bubblewrap.rs  mod.rs  policy.rs  seatbelt.rs
crates/adapter-smith/src/tools/: agentd.rs  browser.rs  construct_daemon.rs  execution.rs  fs.rs  mod.rs  shell.rs  subagent.rs
crates/adapter-zarvis/: Cargo.toml
crates/adapter-zarvis/src/: agent.rs  compact.rs  context.rs  hooks.rs  interactive.rs  interval_suggest.rs  main.rs  memory.rs  model_limits.rs  observe.rs  persist.rs  project_guide.rs  provider_watchdog.rs  skills.rs  tasks.rs  title_mode.rs
crates/adapter-zarvis/src/provider/: anthropic.rs  codex_oauth.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  routing.rs
crates/adapter-zarvis/src/tools/: agentd.rs  browser.rs  fs.rs  mod.rs  proc.rs  shell.rs  subagent.rs
crates/cli/: Cargo.toml
crates/cli/src/: acp.rs  app.rs  client.rs  clipboard_bridge.rs  keymap.rs  lineage.rs  main.rs  matrix_rain.rs  midi.rs  mouse_forward.rs  pty_render.rs  text_util.rs  theme.rs  tui_state.rs  ui.rs  upgrade.rs
crates/cli/src/app/: configure.rs  dynamic_ui.rs  editor.rs  lineage_preview.rs  lineage_section.rs  matrix_clicks.rs  minibuffer.rs  mouse.rs  program_popup.rs  session_picker.rs  session_title_menu.rs  session_title_rename.rs  title_rename.rs  tutorial.rs
crates/cli/tests/: reconnect.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/assets/: index.html
crates/daemon/src/: adapter.rs  availability.rs  config.rs  lib.rs  loops.rs  main.rs  program_verbs.rs  remote.rs  remote_supervisor.rs  server.rs  session.rs  storage.rs  tunnel.rs  usage.rs
crates/daemon/src/program_verbs/: challenge-assumptions.md  crystallize.md  interview.md  simplify.md
crates/daemon/src/session/: events.rs  groups.rs  lifecycle.rs  program_run.rs  pty.rs  usage_probe.rs  widgets.rs
crates/daemon/src/tunnel/: construct.rs  mod.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: dialect_web.rs  key_latency.rs  multi_session_latency.rs  program_view.rs  remote_control.rs  restart.rs  tui_smoke.rs  web_smoke.rs  zoom_latency.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  tools.rs
crates/mcp/src/tools/: browser.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: adapter.rs  agent_context.rs  lib.rs  osc11.rs  paths.rs  slash.rs
crates/protocol/src/adapter/: policy.rs  pty.rs
docs/: RELEASING.md  adding-a-harness.md  architecture.md  configuration.md  generative-widgets.md  harnesses.md  memory.md  midi.md  program.md  remote-control.md  smith.md  unified-tool-layer.md  zarvis.md
examples/: config.toml
scripts/: smoke.sh  test_agent.sh  test_agentd.sh
specs/: 0005-reconnect-must-preserve-live-terminal-state.md  0013-tool-call-grouping-is-presentation-only.md  0013-webui-pty-sessions-can-switch-views.md  0014-subagents-are-parented-helpers.md  0015-approval-modes.md  0016-tui-chat-mode-is-structured-events-only.md  0017-pty-scrollback-from-messages.md  0017-pty-scrollback-is-real-terminal-history.md  0018-webui-session-urls-are-addressable.md  0019-operator-widgets-use-matrix-rain-viewport.md  0020-operator-runs-ambiently.md  0021-operator-ambient-tick-carries-fleet-snapshot.md  0022-operator-ambient-loop-runs-as-monitor-subagent.md  0023-operator-monolog-typewriter.md  0023-resume-redraw-waits-for-output-to-settle.md  0023-resumed-pty-rehydrates-from-daemon-not-stale-client-state.md  0025-pin-tiles-share-the-main-parser-at-one-size.md  0026-single-binary-daemon-and-client.md  0027-tui-terminal-theme-aware.md  0028-smith-oauth-providers-are-explicit.md  0029-smith-os-sandbox-pluggable.md  0030-smith-model-profiles-are-named-endpoints.md  0031-claude-oauth-direct-api.md  0031-session-archive.md  0031-sessions-fork-into-new-siblings.md  0032-smith-active-model-persists-across-resume.md  0033-daemon-lifecycle-subcommands.md  0034-forwarded-pastes-honor-child-bracketed-paste-mode.md  0035-interactive-upgrade-checks.md  0035-tui-clipboard-targets-user-terminal.md  0037-claude-large-prompts-avoid-launch-args.md  0037-tui-pty-keystroke-latency.md  0038-construct-new-opens-interactive-tui.md  0039-tui-split-panes-keep-unique-sessions.md  0040-mouse-events-forward-to-tracking-child.md  0041-operational-markdown-canvas.md  0041-session-canvas-is-orchestration-state.md  0041-session-program-is-orchestration-state.md  0042-canvas-run-progress-affordance.md  0042-program-run-progress-affordance.md  (+85 more)
