[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/client",
    "crates/daemon",
    "crates/cli",
    "crates/mcp",
    "crates/adapter-shell",
    "crates/adapter-claude",
    "crates/adapter-codex",
    "crates/adapter-antigravity",
    "crates/adapter-zarvis",
    "crates/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["agentd contributors"]
repository = "https://github.com/Leemoonsoo/agentd"
description = "Cross-harness agent fleet TUI and daemon"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
nix = { version = "0.29", features = ["signal", "process"] }
which = "6"
futures = "0.3"
unicode-width = "0.2.1"
base64 = "0.22"
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
eventsource-stream = "0.2"
tokio-tungstenite = "0.24"
qrcode = { version = "0.14", default-features = false }
httparse = "1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

agentd-protocol = { path = "crates/protocol" }
agentd-client = { path = "crates/client" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
