[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/client",
    "crates/daemon",
    "crates/cli",
    "crates/mcp",
    "crates/adapter-shell",
    "crates/adapter-claude",
    "crates/adapter-codex",
    "crates/adapter-antigravity",
    "crates/adapter-grok",
    "crates/adapter-common",
    "crates/adapter-smith",
    "crates/e2e",
]

[workspace.package]
version = "0.12.6"
edition = "2021"
license = "MIT"
authors = ["agentd contributors"]
repository = "https://github.com/zarvis-ai/agentd"
description = "Cross-harness agent fleet TUI and daemon"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
toml_edit = "0.22"
nix = { version = "0.29", features = ["signal", "process"] }
which = "6"
futures = "0.3"
unicode-width = "0.2.1"
base64 = "0.22"
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
eventsource-stream = "0.2"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
qrcode = { version = "0.14", default-features = false }
httparse = "1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
diffy = "0.4"

agentd-protocol = { path = "crates/protocol" }
agentd-client = { path = "crates/client" }
construct-adapter-common = { path = "crates/adapter-common" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Optimize dependencies even in dev builds. The TUI's per-byte hot
# path (PTY OSC/ANSI state machine + the `vt100` shadow parser) lives
# largely in dependency code, and at `opt-level = 0` those un-inlined
# per-byte loops are ~10x slower — enough that a debug build saturates
# the single-threaded feed+render loop under multi-session load while
# release stays snappy. `package."*"` applies only to dependencies,
# not workspace members, so our own crates keep compiling unoptimized
# (fast incremental rebuilds, full debuggability).
[profile.dev.package."*"]
opt-level = 3

# Vendored `vt100` fork (see `vendor/vt100`). Upstream `Grid::scroll_up`
# only pushes scrolled-off lines to scrollback when no scroll region is
# active, which drops the entire conversation for children that pin a
# footer with a top-anchored DECSTBM region (codex: `ESC[1;Nr`). The fork
# saves whenever the region's top margin is row 0, matching xterm /
# xterm.js, so PTY scroll-up shows the real, complete terminal history.
[patch.crates-io]
vt100 = { path = "vendor/vt100" }
