[package]
name = "agentd-adapter-antigravity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Google Antigravity CLI adapter for agentd (wraps the `agy` CLI)"

[[bin]]
name = "agentd-adapter-antigravity"
path = "src/main.rs"

[dependencies]
agentd-protocol = { workspace = true, features = ["pty"] }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
