[package]
name = "construct-adapter-antigravity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Google Antigravity CLI adapter for construct (wraps the `agy` CLI)"

[lib]
name = "construct_adapter_antigravity"
path = "src/lib.rs"

[dependencies]
construct-protocol = { workspace = true, features = ["pty"] }
construct-adapter-common.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
rusqlite.workspace = true
