[package]
name = "construct-adapter-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Claude Code adapter for agentd (wraps the `claude` CLI)"

[lib]
name = "construct_adapter_claude"
path = "src/lib.rs"

[dependencies]
agentd-protocol = { workspace = true, features = ["pty"] }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
