[package]
name = "construct-adapter-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI Codex adapter for agentd (wraps the `codex` CLI)"

[lib]
name = "construct_adapter_codex"
path = "src/lib.rs"

[dependencies]
agentd-protocol = { workspace = true, features = ["pty"] }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
