[package]
name = "construct-adapter-hermes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hermes Agent CLI adapter for construct (wraps the `hermes` CLI)"

[lib]
name = "construct_adapter_hermes"
path = "src/lib.rs"

[dependencies]
construct-protocol = { workspace = true, features = ["pty"] }
construct-adapter-common.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
