[package]
name = "construct-adapter-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Generic shell command adapter for construct"

[lib]
name = "construct_adapter_shell"
path = "src/lib.rs"

[dependencies]
construct-protocol = { workspace = true, features = ["pty"] }
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
