[package]
name = "construct-adapter-smith"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Built-in multi-provider agent harness for construct (talks to OpenAI, Anthropic, Ollama directly)"

[lib]
name = "construct_adapter_smith"
path = "src/lib.rs"

[dependencies]
construct-protocol = { workspace = true }
construct-client = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
futures.workspace = true
bytes.workspace = true
uuid.workspace = true
reqwest.workspace = true
async-trait.workspace = true
eventsource-stream.workspace = true
tokio-tungstenite.workspace = true
image.workspace = true
base64.workspace = true
vt100.workspace = true
unicode-width.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
