[package]
name = "agentd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "construct: TUI client for constructd"

[[bin]]
name = "construct"
path = "src/main.rs"

[dependencies]
tempfile = "3"
agentd-protocol = { workspace = true }
agentd-client = { workspace = true }
# The daemon, as a library, so the unified `construct` binary can run it
# directly via the `daemon` subcommand (the standalone `constructd` binary is
# a thin shim over the same crate, kept as a back-compat alias).
agentd = { path = "../daemon" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
unicode-width = { workspace = true }
vt100 = { workspace = true }
tui-term = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
