[package]
name = "agentd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "construct: TUI client and daemon for the agent fleet"

[[bin]]
name = "construct"
path = "src/main.rs"

[dependencies]
tempfile = "3"
agentd-protocol = { workspace = true }
agentd-client = { workspace = true }
# The daemon, as a library, so the `construct` binary can run it directly via
# the `daemon` subcommand. The daemon has no standalone binary of its own.
agentd = { path = "../daemon" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
unicode-width = { workspace = true }
vt100 = { workspace = true }
tui-term = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
diffy = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
construct-mcp = { path = "../mcp" }
construct-adapter-shell = { path = "../adapter-shell" }
construct-adapter-claude = { path = "../adapter-claude" }
construct-adapter-codex = { path = "../adapter-codex" }
construct-adapter-antigravity = { path = "../adapter-antigravity" }
construct-adapter-grok = { path = "../adapter-grok" }
construct-adapter-smith = { path = "../adapter-smith" }
async-trait = { workspace = true }
eventsource-stream = { workspace = true }
bytes = { workspace = true }

# OSC 11 terminal-background detection (timed poll/read on the tty).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
