[package]
name = "agentd-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Async IPC client for the agentd daemon (Unix socket, JSON-RPC)"

[lib]
path = "src/lib.rs"

[dependencies]
agentd-protocol = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
