[package]
name = "agentd-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "End-to-end test harness for agentd — spawns the real daemon binary against a temp $AGENTD_*_DIR and drives it via the IPC client (and optionally the TUI in a pseudo-terminal)."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
agentd-client = { workspace = true }
agentd-protocol = { workspace = true }
anyhow.workspace = true
tokio.workspace = true
portable-pty.workspace = true
vt100.workspace = true
serde_json.workspace = true
chromiumoxide = { workspace = true }
futures.workspace = true
base64.workspace = true
tempfile = "3"

[dev-dependencies]
reqwest = { workspace = true }
