[package]
name = "construct-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP stdio server for construct: lets an agent inside an construct session control the daemon"

[lib]
name = "construct_mcp"
path = "src/lib.rs"

[dependencies]
construct-protocol = { workspace = true }
construct-client = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
image.workspace = true
