[package]
name = "construct-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wire protocol types for construct: AHP (daemon-adapter) and IPC (client-daemon)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
portable-pty = { workspace = true, optional = true }

[features]
default = []
# Enable the [`adapter::pty`] runtime helper. Heavy: pulls in `portable-pty`
# and friends. Only adapters that spawn a PTY-backed child should opt in.
pty = ["dep:portable-pty"]
